# nice-hooks

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  nice_hooks.py  pyproject.toml  test.py
docs/: activationcache.rst  conf.py  index.rst  modulepaths.rst  requirements.txt  usage.rst
nice_hooks/: __init__.py  activationcache.py  nice_hooks.py
src/nice_hooks/: __init__.py  nice_hooks.py
tests/: test.py  test_nice_hooks.py
