[tool.poetry]
name = "nice-hooks"
version = "0.1.0"
description = "Convenience functions for working with pytorch hooks."
authors = ["Adam newgas <boris@boristhebrave.com>"]
readme = "README.md"
packages = [{include = "nice_hooks"}]

[tool.poetry.dependencies]
python = "^3.7"
torch = ">=1.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"