[tool.poetry]
name = "nice-hooks"
version = "0.1.0"
description = "Convenience functions for working with pytorch hooks."
authors = ["Adam newgas <boris@boristhebrave.com>"]
readme = "README.md"
packages = [{include = "nice_hooks"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=1.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
sphinx = "6.2"
sphinx-rtd-theme = "^1.2.0"
sphinx-autoapi = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"